Finished styling.  Fixed mobile horizontal scrolling on datatables.

--- a/FinalProject.UI/Content/css/custom.css
+++ b/FinalProject.UI/Content/css/custom.css
@@ -70,3 +70,7 @@ th{
     margin: auto;
     padding: 5%;
 }
+
+h3, .names{
+    font-weight: bold;
+}
